Fix alignment

--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,7 @@
 
 .title-text {
   color: black;
-  font-size: 70px;
+  font-size: 3em;
 }
 .site-layout-content {
   min-height: 280px;
